Added ability to search weather by city, ability to check weather by date

--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -1,6 +1,5 @@
 #search-bar{ 
   text-align: center;
-  
 }
 
 input[type=text] {
@@ -10,7 +9,8 @@ input[type=text] {
   box-sizing: border-box;
   border: 2px solid #CC7722;
   outline: none;
-  color: white;
+  background-color: black;
+  color: #fff;
   
   /* opacity: 0.5; */
 }
